[package]
name = "funny-shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "funnyshapes"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
numpy = "0.20.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rand = "0.8.5"
